# SGF

./: .gitignore  CMakeLists-new.txt  CMakeLists.txt  CMakeLists.txt.user.2ef7514  CMakeLists.txt.user.5a7470f  README  SGFSolution_VS2010.sln  coding conv.txt  config.h  sgf.kdev4  types.h
CB/: GameEngine.cbp
ExternalLibs/7z/: CMakeLists.txt
ExternalLibs/SDL2/: CMakeLists.txt
ExternalLibs/SDL2_SGF/: CMakeLists.txt  readme
ExternalLibs/SDL2_image-2.0.0/: CMakeLists.txt  SDL_image.h
ExternalLibs/SDL2_image-2.0.3/: CMakeLists.txt
ExternalLibs/SDL2_mixer-2.0.2/: CMakeLists.txt  SDL_mixer.h
ExternalLibs/SDL2_mixer-2.0.2/VisualC/: SDL_mixer.vcxproj
ExternalLibs/SDL2_mixer-2.0.2/native_midi/: CMakeLists.txt
ExternalLibs/SDL2_mixer-2.0.2/timidity/: CMakeLists.txt
ExternalLibs/SDL2_ttf-2.0.12/: CMakeLists.txt  SDL_ttf.c  SDL_ttf.h
ExternalLibs/SDL_gfx-2.0.24/: CMakeLists.txt  SDL_gfxPrimitives.c  SDL_rotozoom.c
ExternalLibs/SFL2.0src/: CMakeLists.txt  prelude.h  sflcons.c  sfldate.c  sfldir.c  sfldir.h  sflfile.c
ExternalLibs/expat-2.1.0/: CMakeLists.txt  expat_config.h  expat_config.h.cmake
ExternalLibs/expat-2.1.0/examples/: elements.vcxproj  outline.vcxproj
ExternalLibs/expat-2.1.0/lib/: expat.vcxproj  expat_external.h  expat_static.vcxproj  expatw.vcxproj  expatw_static.vcxproj  xmltok.h
ExternalLibs/expat-2.1.0/xmlwf/: xmlwf.vcxproj
ExternalLibs/freetype-2.9.1/: CMakeLists-not-used.txt  CMakeLists-orig.txt  CMakeLists-sgf.txt  CMakeLists.txt
ExternalLibs/hawknl/: CMakeLists.txt
ExternalLibs/hawknl/src/: sock.cpp
ExternalLibs/md5/: CMakeLists.txt
ExternalLibs/pcre/: CMakeLists.txt
ExternalLibs/sge2d/: CMakeLists.txt
ExternalLibs/sge2d/include/: sgeresource.h
ExternalLibs/sge2d/src/: sge_bm_text.cpp  sgeresource.c
ExternalLibs/sha1-c/: CMakeLists.txt
ExternalLibs/zip/: CMakeLists.txt
Gamecore/: SGF.h  SGF_Config.h  SGF_Global.h  SGF_Types.h  sdl.h  tiffconf.h
Gamecore/ai/: SGF_AstarHeap.h  SGF_AstarLib.h  SGF_Behavior.h  SGF_Map.h  SGF_PathFinder.h
Gamecore/configuration/: SGF_CmdVars.h  SGF_ConfigVars.h  SGF_Configuration.h  SGF_SysVars.h
Gamecore/exceptions/: SGF_Error.h  SGF_Exception.h  SGF_FileExceptions.h  SGF_LoadException.h  SGF_MenuException.h  SGF_MugenException.h  SGF_NetException.h  SGF_ScriptException.h  SGF_ShutdownException.h  SGF_TokenException.h  all.h
Gamecore/game/: SGF_Command.h  SGF_Console.h  SGF_Control.h  SGF_Mod.h  SGF_Theater.h  SGF_World.h
Gamecore/geometry/: SGF_DrawVert.h  SGF_JointTransform.h  SGF_TraceModel.h  all.h
Gamecore/graphics/: SGF_Bitmap.h  SGF_Color.h  SGF_FireEffect.h  SGF_GradientEffect.h  SGF_LitBitmap.h  SGF_Poligon.h  SGF_TransBitmap.h  sgf_commongraphics.h
Gamecore/gui/: SGF_BoundBox.h  SGF_Box.h  (+11 more)
Source/: SGF_Global.cpp
Source/ai/: CMakeLists.txt  SGF_AstarHeap.cpp  SGF_AstarLib.cpp  SGF_Map.cpp  SGF_PathFinder.cpp
Source/configuration/: CMakeLists.txt  SGF_CmdVars.cpp  SGF_ConfigSystem.cpp  SGF_Configuration.cpp  SGF_SysVar.cpp
Source/environment/: CMakeLists.txt
Source/game/: CMakeLists.txt  SGF_Console.cpp  SGF_Control.cpp  SGF_Mod.cpp  SGF_Theater.cpp  SGF_World.cpp
Source/geometry/: CMakeLists.txt  DrawVert.cpp  JointTransform.cpp  TraceModel.cpp
Source/graphics/: CMakeLists.txt  SGF_Bitmap.cpp  SGF_Color.cpp  SGF_FireEffect.cpp  SGF_GradientEffect.cpp  SGF_LitBitmap.cpp  SGF_Poligon.cpp  SGF_TransBitmap.cpp
Source/gui/: .directory  CMakeLists.txt  SGF_BoundBox.cpp  SGF_Box.cpp  SGF_ContextBox.cpp  SGF_Coordinate.cpp  SGF_FadeToolGui.cpp  SGF_GuiAnimation.cpp  SGF_GuiTimer.cpp  SGF_LineEdit.cpp  SGF_PopupBox.cpp  SGF_RectArea.cpp  SGF_ScrollList.cpp  SGF_SelectList.cpp  SGF_TabbedBox.cpp  SGF_Widget.cpp  fadetool_old.cpp
Source/input/: .directory  CMakeLists.txt  SGF_ButtonMapping.cpp  SGF_Events.cpp  SGF_Input.cpp  SGF_InputManager.cpp  SGF_InputSource.cpp  SGF_Joystick.cpp  SGF_Key.h  SGF_KeyMapping.cpp  SGF_Keyboard.cpp  SGF_Mouse.cpp  SGF_TextInput.cpp  sdl-joystick.cpp
Source/level/: CMakeLists.txt  SGF_LevelUtils.cpp
Source/lists/: .directory  CMakeLists.txt  SGF_AirList.cpp  SGF_ImageList.cpp  SGF_PcxList.cpp  SGF_SndList.cpp
Source/menu/: .directory  CMakeLists.txt  SGF_ActionFactory.cpp  SGF_ActionSpeed.cpp  SGF_MenuAction.cpp  SGF_MenuAnimation.cpp  SGF_MenuGlobal.cpp  SGF_MenuOption.cpp  SGF_MenuV2.cpp  SGF_OptionAdventure.cpp  SGF_OptionAdventureCpu.cpp  SGF_OptionChangeMod.cpp  SGF_OptionConfig.cpp  SGF_OptionCredits.cpp  SGF_OptionDummy.cpp  SGF_OptionFactory.cpp  SGF_OptionFullScreen.cpp  SGF_OptionInvencible.cpp  SGF_OptionJoystick.cpp  SGF_OptionKey.cpp  SGF_OptionLevel.cpp  SGF_OptionLives.cpp  SGF_OptionMenu.cpp  SGF_OptionNetworkHost.cpp  SGF_OptionNetworkJoin.cpp  SGF_OptionNpcBuddies.cpp  SGF_OptionPlaymode.cpp  SGF_OptionQuit.cpp  SGF_OptionScreenSize.cpp  SGF_OptionSelectFontV2.cpp  SGF_OptionSpeed.cpp  SGF_OptionTabMenu.cpp  SGF_OptionVersus.cpp
Source/mortal/: CMakeLists.txt  gfx.cpp
Source/mugen/: CMakeLists.txt
Source/mugen/Ast/: Ast.cpp  AstManager.cpp
Source/network/: CMakeLists.txt  SGF_NetChatServer.cpp  SGF_NetClient.cpp  SGF_NetServer.cpp  SGF_Network.cpp  chat-widget.cpp  chat_client.cpp
Source/objects/: CMakeLists.txt  SGF_Element.cpp  SGF_Object.cpp  SGF_ObjectCollidable.cpp
VC/: GameEngine _VS2010.opensdf  GameEngine.sln  GameEngine.vcproj  GameEngine.vcxproj  GameEngine.vcxproj.filters  teste.asm
cmake/: CMakeCache.txt  ConfigureChecksExpat.cmake  FileList.cmake  FindCygwin.cmake  FindExpat.cmake  FindGccAtomic.cmake  FindJPEG9.cmake  FindPERL.cmake  FindPERLLIBS.cmake  FindSDL2.cmake  FindSysLog.cmake  FindWEBP.cmake  FindZLIB-SGF.cmake  Makefile  TestBitsAtomic.cmake  TestBitsAtomic.cpp  TestBitsAtomicCXX.cpp  TestExceptions.cmake  TestExceptions.cpp  TestForPythonEmbed.cmake  TestPThreads.cmake  TestPthreadCancel.cpp  TestPthreadExpirationNP.cpp  TestPthreadMutexTypeCOU.cpp  TestPthreadMutexTypeINI_NP.cpp  TestPthreadMutexTypeREC.cpp  TestPthreadMutexTypeREC_NP.cpp  TestPthreadSuspend.cpp  TestSignalType.cmake  a.out  cmake_install.cmake  cmake_uninstall.cmake  sgf_install_headers.cmake
(+429 files in other folders)
